# site-profiler

./: .gitignore  README.md  pyproject.toml
site_profiler/: __init__.py  aggregate.py  api.py  block_status.py  cli.py  csp_hints.py  fetch.py  mcp_server.py  parse.py  registry.py  schema.py  strategy.py
site_profiler/detectors/: __init__.py  base.py
site_profiler/detectors/bot_protection/: __init__.py  akamai_bm.py  aws_waf.py  cloudflare_bm.py  datadome.py  first_party.py  kasada.py  perimeterx.py
site_profiler/detectors/captcha/: __init__.py  arkose.py  aws_waf_captcha.py  datadome_captcha.py  friendly_captcha.py  geetest.py  hcaptcha.py  recaptcha.py  turnstile.py
site_profiler/detectors/edge/: __init__.py  akamai.py  cloudflare.py  cloudfront.py  fastly.py  netlify.py  vercel.py
site_profiler/detectors/framework/: __init__.py  angular.py  aspnet.py  astro.py  bubble.py  contentful.py  django.py  drupal.py  express.py  framer.py  gatsby.py  ghost.py  hubspot.py  joomla.py  laravel.py  magento.py  nextjs.py  nuxt.py  qwik.py  rails.py  react.py  remix.py  salesforce_pbc.py  sanity.py  shopify.py  solid_start.py  sphinx.py  squarespace.py  storyblok.py  strapi.py  svelte.py  sveltekit.py  vue.py  webflow.py  wix.py  wordpress.py
site_profiler/detectors/hydration/: __init__.py  app_context.py  app_router.py  deferred_state.py  eager_data.py  initial_state.py  next_data.py  nuxt_state.py
tests/: conftest.py  test_block_status.py  test_cli.py  test_detectors.py  test_e2e_offline.py  test_mcp_server.py  test_parse.py  test_strategy.py
tests/detectors/: conftest.py
tests/detectors/_base/: test_base.py
tests/detectors/captcha/: test_arkose.py  test_aws_waf_captcha.py  test_datadome_captcha.py  (+5 more)
(+5 files in other folders)
