[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "site-profiler"
version = "0.1.0"
description = "URL -> structured SiteProfile (tech stack, edge, anti-bot, captcha, framework, robots, extraction strategy)"
requires-python = ">=3.10"
authors = [{name = "Yossef"}]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "selectolax>=0.3.21",
    "tldextract>=5.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
site-profiler = "site_profiler.cli:main"

[tool.setuptools.packages.find]
include = ["site_profiler*"]
exclude = ["tests*", "analysis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
